# jil

./: CMakeLists.txt
data/jilfiles/: binding.cfg  options.cfg  status_line.cfg
data/jilfiles/ftplugin/cpp/: options.cfg
data/jilfiles/style/: default.cfg
data/jilfiles/theme/: default.cfg
data/test/: wrap.txt
data/test/chardet/: big5.txt  gb18030.txt  latin1.txt  shift_js.txt  utf8 bom.txt  utf8.txt
data/test/ff/: none.txt  win.txt
doc/: Build Instructions (Windows).odt
doc/design/: Command and Binding.odt  Lex.odt  Wrap.odt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  active_list_window.cc  active_list_window.h  app.cc  app.h  binding.cc  binding.h  binding_config.cc  binding_config.h  book_frame.cc  book_frame.h  chai_proxy.cc  chai_proxy.h  config.cc  config.h  font_util.cc  font_util.h  font_util_unittest.cc  i18n_strings.h  i18n_util.cc  i18n_util.h  id.h  notebook.cc  notebook.h  option.cc  option.h  session.cc  session.h  skin.cc  skin.h  text_page.cc  text_page.h
src/base/: CMakeLists.txt  compiler_specific.h  foreach.h  math_util.h  string_util.cc  string_util.h  string_util_unittest.cc
src/editor/: CMakeLists.txt  action.h  binding.cc  binding.h  buffer_listener.h  color.cc  color.h  compile_config.h  defs.h  edit_action.cc  edit_action_unittest.cc  file_io.cc  file_io.h  file_type.cc  file_type.h  graphics.cc  graphics.h  key.cc  key.h  lex.cc  lex.h  line_nr_area.cc  line_nr_area.h  notebook.cc  notebook.h  option.h  performance_util.cc  performance_util.h  renderer.cc  renderer.h  seeker.cc  seeker.h  status_line.cc  status_line.h  style.cc  style.h  tab.cc  tab.h  tab_util_unittest.cc  text_area.cc  (+27 more)
src/libconfig/: CMakeLists.txt
src/syntax-parser/: Makefile  cpp_parser.cpp  cpp_parser.h  cpp_parser_test.cpp  htm_printer.cpp  htm_printer.h
src/uchardet/: CMakeLists.txt  CharDistribution.h  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangGreekModel.cpp  LangHebrewModel.cpp  LangHungarianModel.cpp  LangThaiModel.cpp  nsCodingStateMachine.h  nsEscSM.cpp  nsMBCSGroupProber.cpp  nsMBCSSM.cpp  nsPkgInt.h  nsSBCharSetProber.h  nsSJISProber.cpp  nsUniversalDetector.cpp  readme.txt
